--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
+    "framer-motion": "^12.4.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
