--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "rxjs": "^7.8.1",
-    "sweetalert2": "^11.17.2"
+    "sweetalert2": "^11.17.2",
+    "tailwind-scrollbar": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
