--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,3 @@
-
-//Este no se usa
 server {
     listen 5173;
     
@@ -17,7 +15,7 @@ server {
     
     # Configuración única para todas las rutas API con preservación explícita del método HTTP
     location /api/ {
-        proxy_pass http://gateway-service:8080/;
+        proxy_pass http://gateway-service:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
