--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.4.3",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -22,6 +23,7 @@
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-pdf": "^9.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
